--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 </head>
 
 <body>
-  <div id='app'>
-    <div id="block-meta-list"></div>
-    <div id="container" ondrop="onBlankDrop(event)" ondragover="onBlankDragOver(event)"></div>
-  </div>
+  <div id='app'></div>
 </body>
-<script src="./index.ts"></script>
+<script src="./index.tsx"></script>
 
 </html>
