--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div id='app'></div>
+  <script src="./src/index.tsx"></script>
 </body>
-<script src="./index.tsx"></script>
 
 </html>
